[gd_scene load_steps=4 format=2]

[ext_resource path="res://ressource/sprites/numpad.png" type="Texture" id=1]
[ext_resource path="res://ressource/sprites/selected_halo.png" type="Texture" id=2]
[ext_resource path="res://Game/NewGame.gd" type="Script" id=3]

[node name="NumpadSays" type="Control"]
margin_left = 367.05
margin_top = 163.925
margin_right = 367.05
margin_bottom = 163.925
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 415.719
margin_top = 96.7086
margin_right = 733.719
margin_bottom = 692.709
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="halo_8" type="Sprite" parent="."]
visible = false
position = Vector2( 580.831, 296.053 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_0" type="Sprite" parent="."]
visible = false
position = Vector2( 579.889, 481.25 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_3" type="Sprite" parent="."]
visible = false
position = Vector2( 642.247, 417.632 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_2" type="Sprite" parent="."]
visible = false
position = Vector2( 581.461, 416.687 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_1" type="Sprite" parent="."]
visible = false
position = Vector2( 522.877, 420.46 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_6" type="Sprite" parent="."]
visible = false
position = Vector2( 643.507, 360.934 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_5" type="Sprite" parent="."]
visible = false
position = Vector2( 580.831, 357.468 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_4" type="Sprite" parent="."]
visible = false
position = Vector2( 520.359, 357.786 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_7" type="Sprite" parent="."]
visible = false
position = Vector2( 517.837, 295.111 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="halo_9" type="Sprite" parent="."]
visible = false
position = Vector2( 642.247, 296.685 )
scale = Vector2( 0.288833, 0.298677 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
